# image-retrieval

./: .gitignore  pyproject.toml  settings.py  utils.py
app/: app.py
cnn_text_supervision/: MyResNet.py  cnn_embedding.ipynb  cnn_embedding.md  cnn_text_supervision.ipynb  instadata.py  model.py
cnn_training/: cnn_embedding.ipynb  cnn_embedding.py  cnn_training.md  dataset.py
embed_images/: embed_images.md
embed_words/: embed_words.md
retrieve_images/: retrieve_images.py
word2vec_model/: insta_model  word2vec.md  word2vec.py  word2vec_model.ipynb
word_embedding/: word_embedding.ipynb  word_embedding.md
